--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -19,9 +19,9 @@
 }
 
 .description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  /* display: flex; */
+  justify-content: inherit;
+  align-items: inherit;
   gap: 0.5rem;
 }
 
@@ -47,9 +47,11 @@
 }
 
 .card {
-  padding: 1rem 1.2rem;
+  padding: 1rem 1.3rem;
+  margin-right: 2rem;
   border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
+  /* background: rgba(var(--card-rgb), 0); */
+  background: rgba(0, 0, 0);
   border: 1px solid rgba(var(--card-border-rgb), 0);
   transition: background 200ms, border 200ms;
 }
@@ -77,7 +79,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  padding: 4rem 0;
+  padding: 1rem 0;
 }
 
 .center::before {
